--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="container">
 	<div class="well">
 		<p><span class="text-primary"style><b>Deon's Repo</b> </span> </p>
-		<a class="btn btn-sm btn-default" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://deontw.github.io/repo/">添加到Cydia/Sileo/Zebra/Installer</a>
+		<a class="btn btn-sm btn-default" href="sileo://source/https://deontw.github.io/repo/">添加到 Sileo / Add to Sileo</a>
  	</div>
 </div>
 <div style="text-align:center">
