--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <div class="container">
 	<div class="well">
 		<p><span class="text-primary"style><b>Deon's Repo</b> </span> </p>
-		<a class="btn btn-sm btn-default" href="sileo://source/https://deontw.github.io/repo/">添加到 Sileo / Add to Sileo</a>
+		<a class="btn btn-sm btn-default" href="sileo://source/https://deontw.github.io/repo/">Add to Sileo / 添加到 Sileo</a>
+    <a class="btn btn-sm btn-default" href="zbra://sources/add/https://deontw.github.io/repo/">Add to Zebra / 添加到 Zebra</a>
  	</div>
 </div>
 <div style="text-align:center">
